0.14/_sources/reference/envs_api.rst.txt
.. currentmodule:: torchrl.envs

.. _Environment-API:

Environment API
===============

TorchRL offers an API to handle environments of different backends, such as gym,
dm-control, dm-lab, model-based environments as well as custom environments.
The goal is to be able to swap environments in an experiment with little or no effort,
even if these environments are simulated using different libraries.
TorchRL offers some out-of-the-box environment wrappers under :mod:`torchrl.envs.libs`,
which we hope can be easily imitated for other libraries.
The parent class :class:`~torchrl.envs.EnvBase` is a :class:`torch.nn.Module` subclass that implements
some typical environment methods using :class:`tensordict.TensorDict` as a data organiser. This allows this
class to be generic and to handle an arbitrary number of input and outputs, as well as
nested or batched data structures.

Each env will have the following attributes:

- :attr:`env.batch_size`: a :class:`torch.Size` representing the number of envs
  batched together.
- :attr:`env.device`: the device where the input and output tensordict are expected to live.
  The environment device does not mean that the actual step operations will be computed on device
  (this is the responsibility of the backend, with which TorchRL can do little). The device of
  an environment just represents the device where the data is to be expected when input to the
  environment or retrieved from it. TorchRL takes care of mapping the data to the desired device.
  This is especially useful for transforms (see below). For parametric environments (e.g.
  model-based environments), the device does represent the hardware that will be used to
  compute the operations.
- :attr:`env.observation_spec`: a :class:`~torchrl.data.Composite` object
  containing all the observation key-spec pairs.
- :attr:`env.state_spec`: a :class:`~torchrl.data.Composite` object
  containing all the input key-spec pairs (except action). For most stateful
  environments, this container will be empty.
- :attr:`env.action_spec`: a :class:`~torchrl.data.TensorSpec` object
  representing the action spec.
- :attr:`env.reward_spec`: a :class:`~torchrl.data.TensorSpec` object representing
  the reward spec.
- :attr:`env.done_spec`: a :class:`~torchrl.data.TensorSpec` object representing
  the done-flag spec. See the section on trajectory termination below.
- :attr:`env.input_spec`: a :class:`~torchrl.data.Composite` object containing
  all the input keys (``"full_action_spec"`` and ``"full_state_spec"``).
- :attr:`env.output_spec`: a :class:`~torchrl.data.Composite` object containing
  all the output keys (``"full_observation_spec"``, ``"full_reward_spec"`` and ``"full_done_spec"``).

If the environment carries non-tensor data, a :class:`~torchrl.data.NonTensor`
instance can be used.

Env specs: locks and batch size
-------------------------------

.. _Environment-lock:

Environment specs are locked by default (through a ``spec_locked`` arg passed to the env constructor).
Locking specs means that any modification of the spec (or its children if it is a :class:`~torchrl.data.Composite`
instance) will require to unlock it. This can be done via the :meth:`~torchrl.envs.EnvBase.set_spec_lock_`.
The reason specs are locked by default is that it makes it easy to cache values such as action or reset keys and the
likes.
Unlocking an env should only be done if it expected that the specs will be modified often (which, in principle, should
be avoided).
Modifications of the specs such as `env.observation_spec = new_spec` are allowed: under the hood, TorchRL will erase
the cache, unlock the specs, make the modification and relock the specs if the env was previously locked.

Importantly, the environment spec shapes should contain the batch size, e.g.
an environment with :attr:`env.batch_size` ``== torch.Size([4])`` should have
an :attr:`env.action_spec` with shape :class:`torch.Size` ``([4, action_size])``.
This is helpful when preallocation tensors, checking shape consistency etc.

.. _Environment-policy-arg:

Auto-wrapping recurrent transforms via the ``policy=`` argument
---------------------------------------------------------------

Every concrete :class:`~torchrl.envs.EnvBase` subclass — :class:`~torchrl.envs.GymEnv`,
:class:`~torchrl.envs.DMControlEnv`, custom subclasses, etc. — inherits a
``policy`` keyword argument on its constructor. When provided, the
:class:`~torchrl.envs.EnvBase` metaclass post-init hook walks the policy
looking for recurrent submodules (anything implementing
``make_tensordict_primer()``, e.g. :class:`~torchrl.modules.LSTMModule`,
:class:`~torchrl.modules.GRUModule`) and appends what's missing to the env:

* an :class:`~torchrl.envs.transforms.InitTracker` (so ``is_init`` is written
  at every reset) if one is not already present in the env's
  ``full_observation_spec``;
* one :class:`~torchrl.envs.transforms.TensorDictPrimer` per recurrent
  submodule, providing the hidden-state primers the policy needs.

The hook is idempotent and *spec-based* — it asks the env's
``full_observation_spec`` / ``full_state_spec`` what's already there, so it
works correctly even when transforms live inside child envs of a
:class:`~torchrl.envs.SerialEnv` or :class:`~torchrl.envs.ParallelEnv`.

Because the argument is injected by the metaclass, **it does not appear in
subclass** ``__init__`` **signatures** (just like ``spec_locked`` and
``auto_reset``). It is documented on :class:`~torchrl.envs.EnvBase` and works
identically on every subclass. Pass it like any other keyword:

.. code-block:: python

    from torchrl.envs import GymEnv
    from torchrl.modules import GRUModule

    gru = GRUModule(input_size=4, hidden_size=8, num_layers=1,
                    in_keys=["observation", "recurrent_state", "is_init"],
                    out_keys=["features", ("next", "recurrent_state")])
    # Single call: env now has InitTracker + TensorDictPrimer for the GRU.
    env = GymEnv("CartPole-v1", policy=gru)

The same auto-wrap helper is applied a second time by
:class:`~torchrl.collectors.Collector` when an env is passed to it,
so users who construct a bare env first and only later hand it to a
collector with a recurrent policy still get the right transforms wired up.
Because the helper is idempotent, going through both paths does not produce
duplicates.

Limitations:

* If a custom :class:`~torchrl.envs.transforms.InitTracker` was attached
  with a renamed ``init_key``, the helper won't recognise it and may add a
  duplicate. Pass the same custom ``init_key`` (matched by leaf name in
  multi-agent setups) to avoid this, or wire transforms manually.
* Policy factories — ``Callable[[], Callable]`` objects — cannot be
  inspected without instantiation, so auto-wrapping is skipped for them.
  Either build the policy once and pass it via ``policy=``, or attach
  transforms manually with
  :func:`~torchrl.modules.get_env_transforms_from_module`.

.. _Environment-compile-arg:

Compiling envs via the ``compile=`` constructor argument
--------------------------------------------------------

Every concrete :class:`~torchrl.envs.EnvBase` subclass and
:class:`~torchrl.envs.transforms.TransformedEnv` inherit a ``compile`` keyword argument
on their constructors. When provided, the :class:`~torchrl.envs.EnvBase`
metaclass post-init hook calls :meth:`~torchrl.envs.EnvBase.compile` on the
fully-built env (after spec locking, after auto-reset wrapping if any, after
policy-driven transform appending if any). Accepted values:

* ``False`` or ``None`` (default): no compilation.
* ``True``: ``env.compile()`` with default :func:`torch.compile` settings.
* a ``dict``: forwarded to :meth:`~torchrl.envs.EnvBase.compile`.

Using a dict avoids name collisions between :func:`torch.compile` kwargs
(``backend``, ``mode``, ``fullgraph``, ``dynamic``, ``warmup``, ...) and
constructor kwargs of specific envs. ``warmup`` is the number of eager calls
to :meth:`~torchrl.envs.EnvBase.step_and_maybe_reset` before tracing kicks in;
it stabilizes the input TensorDict layout (e.g. post-:meth:`reset` vs.
steady-state post-``step_mdp``) so the compiled function does not recompile.

The same flag works equally well with collectors:

.. code-block:: python

    from functools import partial
    from torchrl.collectors import Collector
    from torchrl.envs import GymEnv, TransformedEnv
    from torchrl.envs.transforms import Compose

    # Plain env, compiled with a 4-call warmup.
    collector = Collector(
        partial(
            GymEnv,
            "HalfCheetah-v4",
            compile={"warmup": 4, "fullgraph": True, "mode": "reduce-overhead"},
        ),
        ...,
    )

    # TransformedEnv: compile applies to the outermost env, which is what
    # the collector calls step_and_maybe_reset on.
    collector = Collector(
        lambda: TransformedEnv(
            GymEnv("HalfCheetah-v4"),
            Compose(...),
            compile={"warmup": 4, "fullgraph": True},
        ),
        ...,
    )

See :meth:`~torchrl.envs.EnvBase.compile` and
:meth:`~torchrl.envs.EnvBase.eager` for the underlying methods.

Env methods
-----------

With these, the following methods are implemented:

- :meth:`env.reset`: a reset method that may (but not necessarily requires to) take
  a :class:`tensordict.TensorDict` input. It return the first tensordict of a rollout, usually
  containing a ``"done"`` state and a set of observations. If not present,
  a ``"reward"`` key will be instantiated with 0s and the appropriate shape.

  To reset *deterministically* to a state contained in the input tensordict
  (e.g. branch a rollout from a saved state, or replay a fixed initial
  condition), pass ``set_state=True``: ``env.reset(td, set_state=True)``. For
  stateless environments such as :class:`~torchrl.envs.PendulumEnv` this honors
  the state entries found in ``td``; for stateful environments that support it,
  the underlying set-state API is used; envs that cannot honor a provided state
  raise ``NotImplementedError``. ``set_state`` is a keyword argument (not a
  tensordict key) so it never stacks/pads across a rollout. When ``set_state`` is
  left unspecified but the tensordict carries state, the state is honored for
  backwards compatibility and a :class:`FutureWarning` is emitted: from v0.15 an
  unspecified ``set_state`` will be treated as ``False`` (state ignored, fresh
  reset).
- :meth:`env.step`: a step method that takes a :class:`tensordict.TensorDict` input
  containing an input action as well as other inputs (for model-based or stateless
  environments, for instance).
- :meth:`env.step_and_maybe_reset`: executes a step, and (partially) resets the
  environments if it needs to. It returns the updated input with a ``"next"``
  key containing the data of the next step, as well as a tensordict containing
  the input data for the next step (ie, reset or result or
  :func:`~torchrl.envs.step_mdp`)
  This is done by reading the ``done_keys`` and
  assigning a ``"_reset"`` signal to each done state. This method allows
  to code non-stopping rollout functions with little effort:

    >>> data_ = env.reset()
    >>> result = []
    >>> for i in range(N):
    ...     data, data_ = env.step_and_maybe_reset(data_)
    ...     result.append(data)
    ...
    >>> result = torch.stack(result)

- :meth:`env.set_seed`: a seeding method that will return the next seed
  to be used in a multi-env setting. This next seed is deterministically computed
  from the preceding one, such that one can seed multiple environments with a different
  seed without risking to overlap seeds in consecutive experiments, while still
  having reproducible results.
- :meth:`env.rollout`: executes a rollout in the environment for
  a maximum number of steps (``max_steps=N``) and using a policy (``policy=model``).
  The policy should be coded using a :class:`tensordict.nn.TensorDictModule`
  (or any other :class:`tensordict.TensorDict`-compatible module).
  The resulting :class:`tensordict.TensorDict` instance will be marked with
  a trailing ``"time"`` named dimension that can be used by other modules
  to treat this batched dimension as it should.

The following figure summarizes how a rollout is executed in torchrl.

.. figure:: /_static/img/rollout.gif

   TorchRL rollouts using TensorDict.

In brief, a TensorDict is created by the :meth:`~.EnvBase.reset` method,
then populated with an action by the policy before being passed to the
:meth:`~.EnvBase.step` method which writes the observations, done flag(s) and
reward under the ``"next"`` entry. The result of this call is stored for
delivery and the ``"next"`` entry is gathered by the :func:`~torchrl.envs.step_mdp`
function.

.. note::
  In general, all TorchRL environment have a ``"done"`` and ``"terminated"``
  entry in their output tensordict. If they are not present by design,
  the :class:`~.EnvBase` metaclass will ensure that every done or terminated
  is flanked with its dual.
  In TorchRL, ``"done"`` strictly refers to the union of all the end-of-trajectory
  signals and should be interpreted as "the last step of a trajectory" or
  equivalently "a signal indicating the need to reset".
  If the environment provides it (eg, Gymnasium), the truncation entry is also
  written in the :meth:`EnvBase.step` output under a ``"truncated"`` entry.
  If the environment carries a single value, it will interpreted as a ``"terminated"``
  signal by default.
  By default, TorchRL's collectors and rollout methods will be looking for the ``"done"``
  entry to assess if the environment should be reset.

.. note::

  The :func:`~torchrl.collectors.utils.split_trajectories` function can be
  used to slice adjacent trajectories. It relies on a ``"traj_ids"`` entry
  in the input tensordict, or on the junction of ``"done"`` and
  ``"truncated"`` if ``"traj_ids"`` is missing. The function emits an
  ``[N_traj, T_max]`` zero-padded tensordict + ``mask``; for new code
  prefer the contiguous 1-D layout and
  :class:`~torchrl.data.replay_buffers.SliceSampler` instead — see
  :ref:`Data layout: contiguous trajectories <data-layout>`.


.. note::

  In some contexts, it can be useful to mark the first step of a trajectory.
  TorchRL provides such functionality through the :class:`~torchrl.envs.transforms.InitTracker`
  transform.


Our environment :ref:`tutorial <pendulum_tuto>`
provides more information on how to design a custom environment from scratch.

Base classes
------------

.. autosummary::
    :toctree: generated/
    :template: rl_template.rst

    EnvBase
    GymLikeEnv
    EnvMetaData

Custom native TorchRL environments
----------------------------------

TorchRL offers a series of custom built-in environments.

.. autosummary::
    :toctree: generated/
    :template: rl_template.rst

    ChessEnv
    FinancialRegimeEnv
    LLMHashingEnv
    PendulumEnv
    TicTacToeEnv
    ToyVLAEnv

MuJoCo custom environments
--------------------------

A family of MuJoCo-backed envs sharing one base class
(:class:`~torchrl.envs.MujocoEnv`) with a swappable physics backend
(``"mujoco-torch"`` -- the default and ``torch.compile``-friendly
native-torch engine, ``"mjx"`` -- JAX-vectorized, or ``"mujoco"`` --
official C-bindings). For envs with a standalone XML asset, the XML can be a
local path or an ``http(s)`` URL, so users can point at remote models without
vendoring them. Pass ``patch_xml=False`` for directory-based local models that
use relative ``<include>`` entries, meshes, textures, or other assets; the
model path is then preserved across all three backends so MuJoCo resolves
resources relative to its directory. Subclasses describe the *task* by
overriding
:meth:`~torchrl.envs.MujocoEnv._compute_reward` and
:meth:`~torchrl.envs.MujocoEnv._compute_done`.

The locomotion classes mirror the Gymnasium ``-v4`` reward and
termination semantics. :class:`~torchrl.envs.SatelliteEnv` is an
attitude-control task with a 4- or 6-CMG cluster and a
manipulability-based singularity penalty driving the policy away from
internal singular configurations of the gimbal Jacobian.
:class:`~torchrl.envs.CubeBowlEnv` is a compact
manipulation task for scripted MuJoCo macro-control examples. It composes a
local MuJoCo Menagerie UR5e + Robotiq 2F-85 scene.
:class:`~torchrl.envs.MicroDuckEnv` is a commanded-velocity locomotion task
for Pollen Robotics' MicroDuck biped. It loads the walking MJCF from a local
``microduck_rl`` checkout (``MICRODUCK_RL_ROOT``), an installed
``mjlab_microduck`` package, or a pinned upstream commit downloaded on demand
with ``download=True``, replaces the heavy collision meshes with box
proxies so the accelerated backends fit in memory, and exposes foot contacts
and foot heights for gait metrics through
:meth:`~torchrl.envs.MujocoEnv.geom_contacts` and
:meth:`~torchrl.envs.MujocoEnv.site_positions`.
A task is data: :class:`~torchrl.envs.MicroDuckTask` is a tensorclass
holding the command box, the reset distribution, the gait clock and the
reward weights and parameters, built with presets such as
:meth:`~torchrl.envs.MicroDuckEnv.speed_range_task`,
:meth:`~torchrl.envs.MicroDuckEnv.sidestep_task` and
:meth:`~torchrl.envs.MicroDuckEnv.jump_task`. The env takes a stacked library
of tasks and every env of the batch holds one row of it, picked at reset from
the tasks' weights or from a ``task_id`` in the reset TensorDict;
:class:`~torchrl.envs.MicroDuckTaskSampler` writes that id from a mixture of
its own. The reward is a registry of terms over shared step features that
:meth:`~torchrl.envs.MicroDuckEnv.register_reward` extends.

MuJoCo env batches can be indexed with integers, slices, integer NumPy arrays,
and integer torch tensors. Indexing returns a detached snapshot, not a live
view: stepping or resetting the snapshot does not mutate the parent env. Assign
the snapshot back (for example, ``env[0] = env0``) to explicitly write its
state into the parent batch. Boolean masks are not supported.

.. autosummary::
    :toctree: generated/
    :template: rl_template.rst

    MujocoEnv
    AntEnv
    CubeBowlEnv
    HopperEnv
    HumanoidEnv
    MicroDuckEnv
    MicroDuckTask
    MicroDuckTaskSampler
    SatelliteEnv
    Walker2dEnv

Domain-specific
---------------

.. autosummary::
    :toctree: generated/
    :template: rl_template_fun.rst

    ModelBasedEnvBase
    model_based.dreamer.DreamerEnv
    model_based.dreamer.DreamerDecoder
    model_based.imagined.ImaginedEnv
    model_based.world_model_env.WorldModelEnv

Helpers
-------

.. autosummary::
    :toctree: generated/
    :template: rl_template_fun.rst

    check_env_specs
    exploration_type
    get_available_libraries
    make_composite_from_td
    set_exploration_type
    step_mdp
    terminated_or_truncated
